--- a/project.html
+++ b/project.html
@@ -8,13 +8,14 @@
       and UIs - Treact
     </title>
     <link rel="stylesheet" href="project.css" />
+    <script src="project.js"></script>
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;900&amp;display=swap"
       rel="stylesheet"
     />
     <link rel="icon" href="/favicon.ico" />
   </head>
-  <body class="root">
+  <body class="root ">
     <section id="explore" data-aos="fade-left" data-aos-duration="1000" data-aos-once="true">
       <header>
         <div class="row">
@@ -48,17 +49,17 @@
                 <li class="menu__list">
                   <a class="menu__link no-cursor" onclick="closeMenu()">Pricing</a>
                 </li>
-                <li class="menu__list"></li>
+                <li class="menu__list">
                   <a href="#" class="menu__link" onclick="closeMenu()">Contact Us</a>
                 </li>
                 <li class="menu__list">
                   <a href="#features" class="menu__link" onclick="closeMenu()">Login</a>
                 </li>
                 <li class="menu__list">
-                  <a class="menu__link no-cursor" onclick="closeMenu()">Sign Up</a>
+                  <a class="menu__link btn no-cursor " onclick="closeMenu()">Sign Up</a>
                 </li>
-                </ul>
-            </div>
+             </ul>
+           </div>
           </nav>
         </div>
       </header>
